Not really a Bug fix but yeah on the previous commit i didn't use the grouping selector , now i do

--- a/CSS Foundations/Grouping Selectors/CSS/styles.css
+++ b/CSS Foundations/Grouping Selectors/CSS/styles.css
@@ -7,7 +7,8 @@
   background-color: yellow;
 }
 
-.sharing {
+.one,
+.two {
   font-size: 28px;
   font-style: Helvetica, "Times New roman", "sans-serif";
 }
